<resources>
    <string name="app_name" translatable="false">BTRooster Lite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="timetable">Timetable</string>
    <string name="CUP" translatable="false">CUP</string>
    <string name="test_timetable">Test Timetable</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="alert_notconnected_text">You\'re not connected to the internet. Try again?</string>
    <string name="alert_notconnected_title">Error</string>
    <string name="opensource_licences">Open-Source Licences</string>
    <string name="alert_nocode_text">You have not set a student number/teacher code. As long as this is not set, the timetable will not be available</string>
    <string name="warning">Warning</string>
    <string name="alert_nolocation_text">You have not set a location. As long as this is not set, the timetable will not be available</string>
    <string name="alert_cupintegration_text">By logging in to CUP you can see your selected classes in your timetable. Do you want to log in?</string>
    <string name="alert_cupintegration_title">CUP Integration</string>
    <string name="error_nocode">Code not entered</string>
    <string name="error_nograde">No grade selected</string>
    <string name="error_timetable">The timetable could not be retrieved</string>
    <string name="cconf_37letters">3&#8211;7 letters of your last name</string>
    <string name="cconf_configure_cup">CUP Configuration</string>
    <string name="cconf_error_37letters">Only 3&#8211;7 characters are allowed</string>
    <string name="cconf_available_names">Available names</string>
    <string name="cconf_error_no_selection">No selection</string>
    <string name="cconf_pin_code">PIN code</string>
    <string name="btrooster_lite_logo">BTRooster Lite Logo</string>
    <string name="int_code">Code</string>
    <string name="int_stn_or_tc">Student number or teacher code</string>
    <string name="int_grade">Grade</string>
    <string name="int_location">Location</string>
    <string name="int_error_code_not_entered">Code not entered</string>
    <string name="int_grade_1_through_3">Grade 1&#8211;3</string>
    <string name="int_grade_4_through_6">Grade 4&#8211;6</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_open_source">Open Source</string>
    <string name="settings_code_title">Code</string>
    <string name="settings_code_summary">Student number/teacher code - not case sensitive</string>
    <string name="settings_location_title">Location</string>
    <string name="settings_location_summary">Location of the Calvin College you are taugth/teach</string>
    <string name="settings_preload_title">Preload timetables</string>
    <string name="settings_preload_summary">Preload timetables for available weeks</string>
    <string name="settings_preload_only_wifi_on">Only preload timetables using Wi-Fi</string>
    <string name="settings_preload_only_wifi_off">Preload timetables using Wi-Fi and mobile networks</string>
    <string name="settings_preload_only_wifi_title">Only preload timetable using Wi-Fi</string>
    <string name="int_error_code_not_accepted">Only student numbers and teacher codes are accepted</string>
    <string name="int_teacher">I\'m a teacher</string>
    <string name="error">Error</string>
    <string name="settings_information">Information</string>
    <string name="vt_view">View</string>
    <string name="vt_class">Class</string>
    <string name="vt_room">Room</string>
    <string name="vt_title">View Timetable</string>
    <string name="vt_save_timetable">Save timetable to cache</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="last_week">Last week</string>
    <string name="current_week">Current week</string>
    <string name="next_week">Next week</string>
    <string name="in_weeks">In | weeks</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
