<!--
    BTRooster Lite: Roosterapp voor Calvijn College
    Copyright (C) 2017 Rutger Broekhoff <rutger broekhoff three at gmail dot com>
    and Jochem Broekhoff

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Informatie">
        <EditTextPreference
            android:key="code"
            android:summary="@string/settings_code_summary"
            android:title="@string/settings_code_title" />
        <ListPreference
            android:entries="@array/locatieArray"
            android:entryValues="@array/locatieValues"
            android:key="location"
            android:summary="@string/settings_location_summary"
            android:title="@string/settings_location_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="t_preload"
            android:summary="@string/settings_preload_summary"
            android:title="@string/settings_preload_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="t_preload"
            android:key="t_preload_only_wifi"
            android:summaryOff="@string/settings_preload_only_wifi_off"
            android:summaryOn="@string/settings_preload_only_wifi_on"
            android:title="@string/settings_preload_only_wifi_title" />
    </PreferenceCategory>
</PreferenceScreen>
