<?xml version="1.0" encoding="utf-8"?>

<!--
    BTRooster Lite: Roosterapp voor Calvijn College
    Copyright (C) 2017 Rutger Broekhoff <rutger broekhoff three at gmail dot com>
    and Jochem Broekhoff

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_opensource"
        android:title="@string/menu_open_source"
        app:showAsAction="never" />

</menu>